# dancing-cells

./: .gitmodules  LICENSE  evaluate_transforms.ipynb  evaluation.py  loss_fig  pyproject.toml  shapley.py
monai_pipeline/: models  monai_dataset.py  requirements.txt  train.py  train_res-unet.py  transforms.py
nnunet/: train.py
nnunet/models/: __init__.py  building_blocks.py  u_net2d.py
singlenet/: __init__.py  model.py  train.py
singlenet/transforms/: calculate_features.py  cell_loader.py  cell_type.py  rand_cell_crop.py
train_unet/: analysis.py  aug_features.py  dataset.py  main.py  requirements.txt  shap.py  test_analysis.py  valid_metrics.py
train_unet/models/: __init__.py  padded_unet.py  res_conv.py  res_unet.py  unet.py
