[project]
name = "singlenet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cell2image@git+https://github.com/lhillma/Cell2Image#egg=3de1b7a",
    "lightning~=2.2.1",
    "monai~=1.3.0",
    "numpy~=1.26.4",
    "seaborn~=0.13.2",
    "torch~=2.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black[jupyter]",
    "isort"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.ruff]
select = ["E", "F", "B", "I", "N", "D", "S", "W", "C4", "EM", "PL", "PTH", "ANN"]
ignore = ["D105", "D200", "D203", "D212", "D401", "ANN101"]
target-version = "py311"
exclude = [
    "tests",
]
line-length = 99
src = ["python"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 10
max-returns = 5

[tool.ruff.pydocstyle]
convention = "google"